--- a/src/Forms/frmAbsence.form
+++ b/src/Forms/frmAbsence.form
@@ -50,9 +50,33 @@
               <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="&#x631;&#x642;&#x645; &#x627;&#x644;&#x637;&#x641;&#x644;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x627;&#x633;&#x645; &#x627;&#x644;&#x637;&#x641;&#x644;" type="java.lang.Object"/>
-                <Column editable="false" title="&#x627;&#x644;&#x64a;&#x648;&#x645;" type="java.lang.Object"/>
+                <Column editable="false" title="&#x633;&#x628;&#x628; &#x627;&#x644;&#x63a;&#x64a;&#x627;&#x628;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x627;&#x644;&#x62a;&#x627;&#x631;&#x64a;&#x62e;" type="java.lang.Object"/>
               </Table>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="2">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
             </Property>
             <Property name="columnSelectionAllowed" type="boolean" value="true"/>
             <Property name="editingColumn" type="int" value="-4"/>
@@ -67,6 +91,9 @@
             </Property>
             <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
           <Events>
@@ -119,7 +146,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x64a;&#x648;&#x645;"/>
+        <Property name="text" type="java.lang.String" value="&#x627;&#x644;&#x633;&#x628;&#x628;"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
