--- a/src/Forms/frmAddChild.form
+++ b/src/Forms/frmAddChild.form
@@ -176,7 +176,7 @@
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="9" rowCount="0">
+              <Table columnCount="10" rowCount="0">
                 <Column editable="false" title="&#x631;&#x642;&#x645; &#x627;&#x644;&#x637;&#x641;&#x644;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x627;&#x644;&#x627;&#x633;&#x645;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x627;&#x644;&#x639;&#x646;&#x648;&#x627;&#x646;" type="java.lang.Object"/>
@@ -186,6 +186,7 @@
                 <Column editable="false" title="&#x630;&#x643;&#x631; , &#x627;&#x646;&#x62b;&#x649;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x627;&#x633;&#x645; &#x627;&#x644;&#x641;&#x635;&#x644;" type="java.lang.Object"/>
                 <Column editable="false" title="&#x631;&#x642;&#x645; &#x627;&#x644;&#x641;&#x635;&#x644;" type="java.lang.Object"/>
+                <Column editable="true" title="null" type="java.lang.Integer"/>
               </Table>
             </Property>
             <Property name="alignmentX" type="float" value="0.8"/>
@@ -193,6 +194,11 @@
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
                 <Column maxWidth="0" minWidth="100" prefWidth="100" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
@@ -611,6 +617,9 @@
       </Constraints>
     </Component>
     <Component class="Controls.ComboB" name="combobox1">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="combobox1ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="150" y="480" width="220" height="30"/>
